corrected various page alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,9 @@ height: 44px;
 background-color: #9ce6ff;
 }
 
-.body-layer-top {
+.body-layer-top { /* unique exception */
+display: flex;
+justify-content: center;
 position: absolute;
 background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(134,144,153,0.9));
 width: 1345px;
@@ -110,8 +112,6 @@ left: 1150px;
 }
 
 .body-layer-top > p:nth-child(3) {
-width: 500px;
-left: 445px;
 position: inherit;
 font-family: 'Caveat', cursive;
 text-shadow: 1px 1px 40px black;
@@ -123,7 +123,6 @@ margin-bottom: 12px;
 }
 
 .body-layer-top > p:nth-child(4) {
-left: 216.5px;
 position: inherit;
 text-align: center;
 font-family: 'Manrope', sans-serif;
@@ -131,7 +130,9 @@ width: 861px;
 top: 150px;
 }
 
-.body-layer-bottom { /* gradient */
+.body-layer-bottom { /* gradient / copyright */
+display: flex;
+justify-content: center;
 background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(134, 144, 153, 0.9));
 height: 222px;
 }
@@ -140,9 +141,9 @@ height: 222px;
 position: absolute;
 color: white;
 font-size: 12.46px;
+width: 160px;
 height: 10px;
 top: 859px;
-left: 589px;
 opacity: 0.4;
 z-index: 3;
 }
@@ -172,6 +173,8 @@ opacity: 0.6;
 }
 
 #second-half {
+display: flex;
+justify-content: center;
 position: relative;
 z-index: 3;
 background-image: linear-gradient(to right, white , #d3d2d0);
@@ -185,14 +188,12 @@ border-color: #d3d2d0;
 
 #second-half > p {
 position: inherit;
-white-space: 'nowrap';
 text-decoration: underline;
 text-decoration-color: #9ce6ff;
 text-underline-offset: 9.4px;
 width: 720px;
 font-size: 17.7px;
 top: 18px;
-left: 324px;
 opacity: 0.6;
 }
 
